--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Obra social accesible y eficaz" >
+    <meta name="keywords" content="obra, social, prepaga, salud, medicina, consultorios, emergencias">
     <title>Mifar</title>
     <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
     <!-- Css Comentado -->
@@ -13,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
     <div class="container-fluid">
@@ -21,8 +23,8 @@
             <!-- Header -->
             <header>
                 <div class="row">
-                    <div class= "col p-5 col-12 col-md-6 text-center text-md-start">
-                        <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
+                    <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
+                        <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
                         <h1 class="p-3 header__title">Mifar</h1>
                     </div>
                     <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
@@ -30,7 +32,7 @@
                     </div>
                 </div>
             </header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -47,14 +49,16 @@
                 </div>
             </nav>
             <!-- Main -->
-            <main class="container">
-                <div class="row p-5 m-3">
-                    <div class="col-lg-6 lead">
-                        <div class="d-flex justify-content-center">
+            <main class="container p-3">
+                <div class="row p-3 m-5">
+                    <div class="col-lg-6 lead p-3">
+                        <div class="text-center">
                             <h2 class="mainIndex__text--title">Lorem, ipsum.</h2>
                         </div>
-                        <p class="mainIndex__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                        <p class="mainIndex__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
+                        <div class="text-center">
+                            <p class="mainIndex__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
+                            <p class="mainIndex__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
+                        </div>
                     </div>
                     <div class="col-lg-6 img-fluid">
                         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -63,25 +67,27 @@
                                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                             </div>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="Images/hospital1.jpg" class="d-block w-100" alt="Mifar">
+                            <div class="carrousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="Images/hospital1.jpg" class="d-block w-100" alt="Imagen de hospital grande">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="Images/hospital2.jpg" class="d-block w-100" alt="Imagen de hospital medio">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="Images/hospital3.jpg" class="d-block w-100" alt="Imagen de reanimacion">
+                                    </div>
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="Images/hospital2.jpg" class="d-block w-100" alt="Mifar">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="Images/hospital3.jpg" class="d-block w-100" alt="Mifar">
-                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
                         </div>
                     </div>
                 </div>
@@ -93,16 +99,16 @@
                         <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
                         <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 justify-items-center align-content-center p-3">
                         <div class="row justify-content-center align-items-center">
                             <div class="row w-25">
-                                <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" ></svg></a>
+                                <a class="d-flex justify-content-center align-items-center footer__instagram" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" alt="Logo de Instagram" ></svg></a>
                             </div>
                             <div class="row w-25">
-                                <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Twitter"></a>
+                                <a class="d-flex justify-content-center align-items-center footer__twitter" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Logo de Twitter"></a>
                             </div>
                             <div class="row w-25">
-                                <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Facebook"></a>
+                                <a class="d-flex justify-content-center align-items-center footer__facebook" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Logo de Facebook"></a>
                             </div>
                         </div>
                     </div>
