--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Obra social accesible y eficaz" >
+    <meta name="keywords" content="obra, social, prepaga, salud, medicina, consultorios, emergencias">
     <title>Mifar</title>
     <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
     <!-- Css Comentado -->
@@ -13,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
     <div class="container-fluid">
@@ -21,8 +23,8 @@
             <!-- Header -->
             <header>
                 <div class="row">
-                    <div class= "col p-5 col-12 col-md-6 text-center text-md-start">
-                        <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
+                    <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
+                        <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
                         <h1 class="p-3 header__title">Mifar</h1>
                     </div>
                     <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
@@ -30,7 +32,7 @@
                     </div>
                 </div>
             </header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -48,23 +50,23 @@
             </nav>
         <!-- main -->
         <main class="container">
-            <div class="text-center p-5 lead m-3">
+            <div class="text-center p-5 lead m-0">
                 <div class="">
-                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--1 hover__img" src="Images/hombre1.jpg" alt="hombre1"></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--1 hover__img" src="Images/hombre1.jpg" alt="Juan"></a>
                     <div class="mainNosotros__textContainer--1">
                         <h3 class="p-3 m-2">Lorem, ipsum.</h3>
                         <p class="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
                     </div>
                 </div>
                 <div class="">
-                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--2 hover__img" src="Images/hombre2.jpg" alt="hombre2"></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--2 hover__img" src="Images/hombre2.jpg" alt="Jose"></a>
                     <div class="mainNosotros__textContainer--2">
                         <h3 class="p-3 m-2">Lorem, ipsum.</h3>
                         <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
                     </div>
                 </div>
                 <div class="">
-                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--3 hover__img" src="Images/hombre3.jpg" alt="hombre3"></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--3 hover__img" src="Images/hombre3.jpg" alt="Jorge"></a>
                     <div class="mainNosotros__textContainer--3">
                         <h3 class="p-3 m-2">Lorem, ipsum.</h3>
                         <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
@@ -82,13 +84,13 @@
                 <div class="col-md-6 justify-items-center align-content-center p-3">
                     <div class="row justify-content-center align-items-center">
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" ></svg></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" alt="Logo de Instagram"></svg></a>
                         </div>
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Twitter"></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Logo de Twitter"></a>
                         </div>
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Facebook"></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Logo de Facebook"></a>
                         </div>
                     </div>
                 </div>
