--- a/prestadores.html
+++ b/prestadores.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Obra social accesible y eficaz" >
+    <meta name="keywords" content="obra, social, prepaga, salud, medicina, consultorios, emergencias">
     <title>Mifar</title>
     <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
     <!-- Css Comentado -->
@@ -13,87 +15,87 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
     <div class="container-fluid">
-        <div class="container">
-            <!-- Header -->
-            <header>
-                <div class="row">
-                    <div class= "col p-5 col-12 col-md-6 text-center text-md-start">
-                        <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="p-3 header__title">Mifar</h1>
+            <div class="container">
+                <!-- Header -->
+                <header>
+                    <div class="row">
+                        <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
+                            <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
+                            <h1 class="p-3 header__title">Mifar</h1>
+                        </div>
+                        <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
+                            <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
-                        <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
+                </header>
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
+                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="prestadores.html">Prestadores</a></li>
+                                <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
+                                <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                                <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                            <li class="nav-item"><a class="nav-link " href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="prestadores.html">Prestadores</a></li>
-                            <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
-                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                </nav>
+        <!-- Main -->
+        <main class="container">
+            <div class="m-0">
+                <div class="col">
+                    <div class="lead text-center m-0 p-3">
+                        <h2 class="mainPrestadores__title">Lorem, ipsum.</h2>
+                        <p class="mainPrestadores__p--1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
+                        <ul class="text-decoration-none list-unstyled mainPrestadores__ul--1">
+                            <li class="">Lorem ipsum dolor sit amet.</li>
+                            <li class="">Lorem, ipsum dolor sit amet consectetur.</li>
+                            <li class="">Lorem ipsum dolor sit amet.</li>
+                        </ul>
+                        <p class="mainPrestadores__p--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
+                        <ul class="text-decoration-none list-unstyled mainPrestadores__ul--2">
+                            <li class="">Lorem ipsum dolor sit amet consectetur.</li>
+                            <li class="">Lorem ipsum dolor sit.</li>
+                            <li class="">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
                         </ul>
                     </div>
-                </div>
-            </nav>
-    <!-- Main -->
-    <main class="container">
-        <div class="m-3">
-            <div class="col">
-                <div class="lead text-center m-3 p-3">
-                    <h2 class="mainPrestadores__title">Lorem, ipsum.</h2>
-                    <p class="mainPrestadores__p--1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                    <ul class="text-decoration-none list-unstyled mainPrestadores__ul--1">
-                        <li class="">Lorem ipsum dolor sit amet.</li>
-                        <li class="">Lorem, ipsum dolor sit amet consectetur.</li>
-                        <li class="">Lorem ipsum dolor sit amet.</li>
-                    </ul>
-                    <p class="mainPrestadores__p--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
-                    <ul class="text-decoration-none list-unstyled mainPrestadores__ul--2">
-                        <li class="">Lorem ipsum dolor sit amet consectetur.</li>
-                        <li class="">Lorem ipsum dolor sit.</li>
-                        <li class="">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    </ul>
-                </div>
-                <div class="text-center m-3 p-5">
-                    <img class="img-thumbnail col-lg-6 img-fluid" src="Images/hospital.jpg" alt="hospital">
-                </div>
-            </div>
-        </div>
-    </main>
-    <!-- Footer -->
-    <footer class="p-3">
-        <div class="row">
-            <div class="col-md-6 text-center text-md-start">
-                <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
-                <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
-            </div>
-            <div class="col-md-6 justify-items-center align-content-center p-3">
-                <div class="row justify-content-center align-items-center">
-                    <div class="row w-25">
-                        <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" ></svg></a>
-                    </div>
-                    <div class="row w-25">
-                        <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Twitter"></a>
-                    </div>
-                    <div class="row w-25">
-                        <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Facebook"></a>
+                    <div class="text-center m-0 p-2">
+                        <img class="img-thumbnail col-lg-6 img-fluid" src="Images/hospital.jpg" alt="Imagen pasillo de hospital">
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
-</div>
+        </main>
+        <!-- Footer -->
+        <footer class="p-3">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start">
+                    <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
+                    <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
+                </div>
+                <div class="col-md-6 justify-items-center align-content-center p-3">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="row w-25">
+                            <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" alt="Logo de Instagram" ></svg></a>
+                        </div>
+                        <div class="row w-25">
+                            <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Logo de Twitter"></a>
+                        </div>
+                        <div class="row w-25">
+                            <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Logo de Facebook"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
     <!-- Bootstrap Link JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
